# OmniAgent

./: .gitignore  .mcp.json  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  gpu_worker.py  mcp_server.py  omni_agent.py  omniagent.service  requirements-ci.txt  requirements.txt  setup-gpu-worker-wsl.ps1  setup_accel.py  start-tunnel.sh  wsl_firewall.py
.github/workflows/: ci.yml  release.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
bitnet/: start.sh
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: API.md  ARCHITECTURE.md  GPU_WORKER.md  INDEX.md  SETUP.md  TOOLS.md  USER_GUIDE.md
smarthub/: CMakeLists.txt  index.html  omni-hub  setup.sh
smarthub/src/: background.c  background.h  keyboard.c  keyboard.h  login.c  login.h  main.c  menu.c  menu.h
src/: __init__.py  _accel.c  advanced.py  code_intel.py  config.py  coordinator.py  experiments.py  features.py  gpu_client.py  integrations.py  mcp.py  memory.py  monitor.py  multimodal.py  oauth.py  persistence.py  platform.py  plugins.py  reasoning.py  state.py  supervisor.py  task_engine.py  tools.py  tts_preprocessor.py  upgrades.py  web.py
src/agents/: __init__.py  base.py  orchestrator.py  scheduler.py  specialists.py
templates/: index.html
tests/: test_agents.py  test_api.py  test_code_intel.py  test_integration.py  test_mcp.py  test_memory.py  test_new_features.py  test_persistence.py  test_security.py  test_state.py  test_tools.py
vscode-extension/: extension.js  package.json
(+15 files in other folders)
